--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -179,6 +179,56 @@
 .newsletter-area .subscribe-btn:hover {
   background: linear-gradient(to bottom, #8d1402, #be0101);
 }
+/* footer link section styles */
+.footer-link-area {
+  padding: 32px 0;
+  background-color: #181818;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+  gap: 30px 0px;
+  border-bottom: 1px solid #303030;
+}
+.footer-link-area .link-container {
+  display: flex;
+  flex-direction: column;
+  gap: 14px;
+}
+.footer-link-area .link-container h5,
+.footer-link-area .link-container a {
+  color: #fff;
+  font-size: 12px;
+  text-decoration: none;
+  text-align: center;
+}
+.footer-link-area .link-container h5 {
+  text-transform: uppercase;
+}
+.footer-link-area .link-container a {
+  font-weight: 200;
+}
+/* footer social links */
+.footer-social {
+  padding: 50px 32px;
+  background-color: #181818;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 30px 0;
+}
+.footer-social .social-link a {
+  text-decoration: none;
+  color: #fff;
+  display: flex;
+  align-items: center;
+}
+.footer-social .social-link a i {
+  font-size: 18px;
+}
+.footer-social .social-link a span {
+  font-size: 14px;
+  font-weight: 300;
+  margin-left: 8px;
+  text-transform: uppercase;
+}
 /* Animations */
 @keyframes slideTop {
   0% {
@@ -226,6 +276,9 @@
   }
   .blog-image img {
     width: 100%;
+  }
+  .footer-social {
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
   }
 }
 @media (max-width: 500px) {
